Assign roles and update the userController

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,3 +17,12 @@ body {
         color: #fff;
     }
 }
+
+h1 {
+    margin-bottom: 30px;
+}
+
+.card {
+    box-shadow: 0 2px 4px  rgba(204, 204, 204, 0.8);
+    padding: 20px 40px;
+}
