--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11288,11 +11288,18 @@ body {
 
 .navbar {
   background-color: #1e2632;
-  box-shadow: 0 5px 10px 0 rgba(204, 204, 204, 0.3);
-  margin-bottom: 40px;
 }
 .navbar a {
   color: #fff;
+}
+
+.sub-nav {
+  background-color: #fff;
+  box-shadow: 0 5px 10px 0 rgba(204, 204, 204, 0.3);
+  margin-bottom: 40px;
+}
+.sub-nav a {
+  color: #1e2632;
 }
 
 h1, .h1 {
