--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,6 +3,7 @@
 $navBar: #1e2632;
 $background: #f7f8f9;
 $text: #3a3c42;
+$primary: #1e2632;
 
 body {
     background-color: $background;
@@ -11,10 +12,18 @@ body {
 
 .navbar {
     background-color: $navBar;
+   
+    a {
+        color: #fff;
+    }
+}
+
+.sub-nav {
+    background-color: #fff;
     box-shadow: 0 5px 10px 0 rgba(204, 204, 204, 0.3);
     margin-bottom: 40px;
     a {
-        color: #fff;
+        color: $primary;
     }
 }
 
